@@ -1,3 +1,7 @@
+2016-06-02 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* index.php: Update standards and data types.
+
 2016-05-30 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* index.php: added News - sdcc 3.6.0 RC1
